--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!LDW.qmd"
+    - "!choosing-right-forecast.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -37,21 +37,9 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  - id: ideas
-    contents: 
-    - /ideas
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
-
-  # - id: careers
+  # - id: ideas
   #   contents: 
-  #   - /careers
+  #   - /ideas
   #   - "!index.qmd"
   #   sort: "date desc"
   #   type: grid
@@ -61,16 +49,31 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  # - id: viewpoints
-  #   contents: 
-  #   - /viewpoints
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: careers
+    contents: 
+    - /careers/posts
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
+
+  - id: viewpoints
+    contents: 
+    - /viewpoints/posts
+    - /viewpoints/interviews
+    - "!index.qmd"
+    - "!london-data-week.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   - id: editors-blog
     contents: 
@@ -96,9 +99,21 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  - id: interviews
+  # - id: interviews
+  #   contents: 
+  #   - /viewpoints/interviews
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
+
+  - id: career-profiles
     contents: 
-    - /viewpoints/interviews
+    - /careers/career-profiles
     - "!index.qmd"
     sort: "date desc"
     type: grid
@@ -108,30 +123,19 @@ listing:
     max-items: 3
     feed: false
 
-  # - id: career-profiles
-  #   contents: 
-  #   - /careers/career-profiles
-  #   - "!index.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
 toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/07/07/LDW.qmd">
+<a href="/ideas/datasciencebites/posts/2023/07/13/choosing-right-forecast.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Teaching a chatbot about love, and other adventures from London Data Week
-Our editor shares his personal highlights from the first ever London Data Week, including an art exhibition about artificial intelligence, a panel discussion on the benefits of open source, and a workshop to help charities tap into statistical expertise.
+## Choosing the right forecast
+Practitioners often select forecast methods based on averages of scores from many probabilistic forecasts. But this is not without its difficulties. A recent paper by Bolin and Wallin defines several properties of scoring rules that help clarify how the rules behave when multiple forecast scores are averaged. Brian King shares his key takeaways. 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/07/07/images/benjamin-davies-Oja2ty_9ZLM-unsplash.png)
+![](ideas/datasciencebites/posts/2023/07/13/images/brendan-church-pKeF6Tt3c08-unsplash.png)
 :::
 :::
 
@@ -166,6 +170,48 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
+## If you don’t understand the statistics involved in data science, make sure to upskill in that area before starting your first role. A lot of junior data scientists focus on learning how to code or get carried away with the modelling without first learning the importance of preparing the data in the correct way so that your predictions can work well in a real life setting.
+Chanuki Seresinhe, head of data science at Zoopla and Hometrack 
+
+::: {.button}
+[Read Chanuki's career profile](careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd)
+:::
+
+:::
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="careers/index.qmd">
+
+## Data Science Careers 
+</a>
+
+::: {#careers}
+:::
+
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="careers/career-profiles/index.qmd">
+
+## Career profiles 
+</a>
+
+::: {#career-profiles}
+:::
+
+:::
+:::
+
+::: {.pullout-text}
+::: {.pullout-container}
+::: {.pullout-block .black-background}
+![](images/quote-purple.png){width="100px"}
+
 ## If we are to embrace the concept of reproducibility, we must write and publish code under the assumption that someone, somewhere, will want to rerun our code. And, if we expect that someone will want to rerun our code (and hopefully check it), we should ensure that the code is readable and does not take too long to run.
 Davit Svanidze et al. on the road to reproducible research
 
@@ -179,12 +225,12 @@ Davit Svanidze et al. on the road to reproducible research
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
+<a href="viewpoints/index.qmd">
 
-## Interviews 
+## Viewpoints 
 </a>
 
-::: {#interviews}
+::: {#viewpoints}
 :::
 
 :::
@@ -202,48 +248,6 @@ Davit Svanidze et al. on the road to reproducible research
 
 :::
 :::
-
-::: {.pullout-text}
-::: {.pullout-container}
-::: {.pullout-block .black-background}
-![](images/quote-purple.png){width="100px"}
-
-## ChatGPT isn’t even close to the sort of artificial superintelligence that might conceivably pose a threat to humankind. The models underpinning it are slow learners that require immense volumes of data to construct anything akin to the versatile concepts humans can concoct from only a few examples.
-Michael Timothy Bennett challenges the 'AI doomsayer' narrative 
-
-::: {.button}
-[Read the article](viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.qmd)
-:::
-
-:::
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="ideas/index.qmd">
-
-## Data Science Ideas
-</a> 
-
-::: {#ideas}
-:::
-
-:::
-:::
-
-<!-- ::: {.content-container}
-::: {.listing-block}
-<a href="careers/index.qmd">
-
-## Data Science Careers 
-</a>
-
-::: {#careers}
-:::
-
-:::
-::: -->
 
 ::: {.footer-text}
 ::: {.footer-container .black-background}
