--- a/ideas/datasciencebites/posts/2023/07/13/choosing-right-forecast.qmd
+++ b/ideas/datasciencebites/posts/2023/07/13/choosing-right-forecast.qmd
@@ -44,7 +44,7 @@ Hence, this paper raises many questions for future consideration but achieves it
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
 About the author
-: **Brian King** is a PhD candidate in the Department of Statistics at Rice University and a current NSF Graduate Research Fellow, with research focused on Bayesian modeling and forecasting for time series of counts. Prior to Rice, he graduated from Baylor University with a BS in mathematics and statistics alongside a secondary major in Spanish and a minor in computer science.
+: **Brian King** is currently a senior machine learning research engineer at Arm, working on applying machine learning to hardware verification. He recently completed his PhD in statistics at Rice University, where his research focused on Bayesian modeling and forecasting for time series of counts.
 :::
 
 ::: {.g-col-12 .g-col-md-6}
