--- a/ideas/datasciencebites/posts/2023/07/17/dsb-live.qmd
+++ b/ideas/datasciencebites/posts/2023/07/17/dsb-live.qmd
@@ -30,21 +30,16 @@ If you have any questions, please feel free to [contact us](https://realworlddat
 
 ::: {.further-info}
 ::: grid
-::: {.g-col-12 .g-col-md-6}
-About the author
-: **Brian King** is a PhD candidate in the Department of Statistics at Rice University and a current NSF Graduate Research Fellow, with research focused on Bayesian modeling and forecasting for time series of counts. Prior to Rice, he graduated from Baylor University with a BS in mathematics and statistics alongside a secondary major in Spanish and a minor in computer science.
-:::
-
-::: {.g-col-12 .g-col-md-6}
+::: {.g-col-12 .g-col-md-12}
 About DataScienceBites
 : [**DataScienceBites**](/ideas/datasciencebites/index.qmd) is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. Find out how to [become a contributor](/contributor-docs/datasciencebites.qmd).
 :::
 
 ::: {.g-col-12 .g-col-md-6}
 Copyright and licence
-: &copy; 2023 Brian King
+: &copy; 2023 Royal Statistical Society
 
-This post is republished with permission from [MathStatBites](https://mathstatbites.org/determining-the-best-way-to-route-drivers-for-ridesharing-via-reinforcement-learning/). Thumbnail image by <a href="https://unsplash.com/@bdchu614?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Brendan Church</a> on <a href="https://unsplash.com/photos/pKeF6Tt3c08?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
   
 :::
 
