--- a/ideas/datasciencebites/posts/2023/07/17/dsb-live.qmd
+++ b/ideas/datasciencebites/posts/2023/07/17/dsb-live.qmd
@@ -8,8 +8,8 @@ categories:
   - Events
 author: Brian Tarran
 date: 07/17/2023
-# image: images/brendan-church-pKeF6Tt3c08-unsplash.png
-# image-alt: New York road signs pointing left and right, both reading 'One Way'.
+image: images/dsb-live.png
+image-alt: DataScienceBites logo overlaid on a busy conference scene.
 toc: false
 ---
 Three major events in the statistics and data science calendar are taking place over the next few months, and we want to give the wider community the opportunity to sample some of the exciting ideas being discussed. But for that, we need your help!
@@ -39,7 +39,8 @@ About DataScienceBites
 Copyright and licence
 : &copy; 2023 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail image includes photo by <a href="https://unsplash.com/@productschool?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Product School</a> on <a href="https://unsplash.com/photos/nOvIa_x_tfo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
+  
   
 :::
 
