homepage and post updates

--- a/ideas/datasciencebites/posts/2023/07/17/dsb-live.qmd
+++ b/ideas/datasciencebites/posts/2023/07/17/dsb-live.qmd
@@ -12,9 +12,9 @@ image: images/dsb-live.png
 image-alt: DataScienceBites logo overlaid on a busy conference scene.
 toc: false
 ---
-Three major events in the statistics and data science calendar are taking place over the next few months, and we want to give the wider community the opportunity to sample some of the exciting ideas being discussed. But for that, we need your help!
+Three major events in the statistics and data science calendar are taking place over the next few months, and we want to give the wider community the opportunity to sample some of the exciting ideas being discussed. For that, we need your help!
 
-If you're a student or early career researcher and you're planning to attend one or all of...
+If you're a student or early career researcher and you're attending one or all of the...
 
 - [World Statistics Congress](https://www.isi2023.org/) 
 - [Joint Statistical Meetings](https://ww2.amstat.org/meetings/jsm/2023/)
@@ -22,7 +22,7 @@ If you're a student or early career researcher and you're planning to attend one
 
 ...we invite you to write about your favourite paper or session as a "Bites" post. 
 
-Bites posts are digestible, engaging, non-technical summaries of research papers and presentations. The goal is to draw attention to the key findings, potential applications, and implications of new ideas in statistics and data science, written for an undergraduate-level audience. [Advice and guidance on how to write a Bites post can be found here](https://realworlddatascience.net/contributor-docs/datasciencebites.html), and [example posts can be found on our DataScienceBites page](https://realworlddatascience.net/ideas/datasciencebites/).
+Bites posts are digestible, engaging, non-technical summaries of research papers and presentations, written for an undergraduate-level audience. The goal is to draw attention to key findings, potential applications, and the wider implications of new ideas and developments in statistics and data science. [Advice and guidance on how to write a Bites post can be found here](https://realworlddatascience.net/contributor-docs/datasciencebites.html), and [example posts can be found on our DataScienceBites page](https://realworlddatascience.net/ideas/datasciencebites/).
 
 For our summer conference coverage, Real World Data Science is partnering with our friends at [MathStatBites](https://mathstatbites.org/). If you write a Bites post and it is accepted for publication, the post will appear on one or both of our sites -- depending on the focus of the research you're writing about.
 
