--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!choosing-right-forecast.qmd"
+    - "!dsb-live.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -127,15 +127,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/datasciencebites/posts/2023/07/13/choosing-right-forecast.qmd">
+<a href="/ideas/datasciencebites/posts/2023/07/17/dsb-live.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Choosing the right forecast
-Practitioners often select forecast methods based on averages of scores from many probabilistic forecasts. But this is not without its difficulties. A recent paper by Bolin and Wallin defines several properties of scoring rules that help clarify how the rules behave when multiple forecast scores are averaged. Brian King shares his key takeaways. 
+## Heading to a conference this summer? Share your learnings here
+Calling all summer conference delegates! If you're heading to one of this year's big statistics and data science events, consider writing about your favourite paper or session as a 'Bites' post. Read on for more details... 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/datasciencebites/posts/2023/07/13/images/brendan-church-pKeF6Tt3c08-unsplash.png)
+![](ideas/datasciencebites/posts/2023/07/17/images/dsb-live.png)
 :::
 :::
 
