cover image added

--- a/viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd
+++ b/viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd
@@ -10,8 +10,8 @@ categories:
 author: Lee Clewley
 date: 07/19/2023
 toc: true
-# image: images/benjamin-davies-Oja2ty_9ZLM-unsplash.png
-# image-alt: An aerial view of London and the River Thames, taken from The Shard, London, United Kingdom.
+image: images/charlesdeluvio-pjAH2Ax4uWk-unsplash.jpg
+image-alt: Person sitting in front of a screen of code.
 ---
 On July 6, 2023, [OpenAI began rolling out the Code Interpreter plugin](https://twitter.com/OpenAI/status/1677015057316872192?s=20) to users of its ChatGPT Plus service. But what exactly is this, and what functionality does it offer?
 
@@ -104,7 +104,7 @@ About the author
 Copyright and licence
 : &copy; 2023 Lee Clewley
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail image by <a href="https://unsplash.com/it/@bendavisual?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Benjamin Davies</a> on <a href="https://unsplash.com/photos/Oja2ty_9ZLM?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail image by <a href="https://unsplash.com/@charlesdeluvio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">charlesdeluvio</a> on <a href="https://unsplash.com/photos/pjAH2Ax4uWk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
   
 
 :::
