image file renamed

--- a/viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd
+++ b/viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd
@@ -10,7 +10,7 @@ categories:
 author: Lee Clewley
 date: 07/19/2023
 toc: true
-image: images/charlesdeluvio-pjAH2Ax4uWk-unsplash.jpg
+image: images/charlesdeluvio-pjAH2Ax4uWk-unsplash.png
 image-alt: Person sitting in front of a screen of code.
 ---
 On July 6, 2023, [OpenAI began rolling out the Code Interpreter plugin](https://twitter.com/OpenAI/status/1677015057316872192?s=20) to users of its ChatGPT Plus service. But what exactly is this, and what functionality does it offer?
