homepage and intro updated

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!dsb-live.qmd"
+    - "!code-interpreter.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -127,15 +127,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/datasciencebites/posts/2023/07/17/dsb-live.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Heading to a conference this summer? Share your learnings here
-Calling all summer conference delegates! If you're heading to one of this year's big statistics and data science events, consider writing about your favourite paper or session as a 'Bites' post. Read on for more details... 
+## Testing out ChatGPT’s new Code Interpreter
+OpenAI's latest plugin turns ChatGPT into a tool for data cleaning, preprocessing, analysis, visualisation and predictive modelling tasks, among other things. Some have hailed it 'the new data scientist', but is it all it’s cracked up to be? Real World Data Science takes Code Interpreter for a test drive. 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/datasciencebites/posts/2023/07/17/images/dsb-live.png)
+![](viewpoints/editors-blog/posts/2023/07/19/images/charlesdeluvio-pjAH2Ax4uWk-unsplash.png)
 :::
 :::
 
@@ -170,11 +170,11 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## If you don’t understand the statistics involved in data science, make sure to upskill in that area before starting your first role. A lot of junior data scientists focus on learning how to code or get carried away with the modelling without first learning the importance of preparing the data in the correct way so that your predictions can work well in a real life setting.
-Chanuki Seresinhe, head of data science at Zoopla and Hometrack 
+## To ensure the safe and responsible use of AI, the focus moving forward needs to be on the operationalisation of AI ethics into the day-to-day development lifecycle. But, what does this look like in practice? And how might you get started as an ethical AI practitioner? In this article, we unpack these questions and give you, the data scientist, a foundation to begin your journey towards trusted AI.
+How to translate AI ethics from theory into practice, by Maxine Setiawan and Mira Pijselman
 
 ::: {.button}
-[Read Chanuki's career profile](careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd)
+[Learn more about Trusted AI](ideas/posts/2023/07/03/trusted-AI.qmd)
 :::
 
 :::
@@ -212,11 +212,11 @@ Chanuki Seresinhe, head of data science at Zoopla and Hometrack
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## If we are to embrace the concept of reproducibility, we must write and publish code under the assumption that someone, somewhere, will want to rerun our code. And, if we expect that someone will want to rerun our code (and hopefully check it), we should ensure that the code is readable and does not take too long to run.
-Davit Svanidze et al. on the road to reproducible research
+## If you don’t understand the statistics involved in data science, make sure to upskill in that area before starting your first role. A lot of junior data scientists focus on learning how to code or get carried away with the modelling without first learning the importance of preparing the data in the correct way so that your predictions can work well in a real life setting.
+Chanuki Seresinhe, head of data science at Zoopla and Hometrack 
 
 ::: {.button}
-[Start your journey](case-studies/posts/2023/06/15/road-to-reproducible-research.qmd)
+[Read Chanuki's career profile](careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd)
 :::
 
 :::
