--- a/viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd
+++ b/viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Testing out ChatGPT’s new Code Interpreter"
 description: |
-  Some have hailed it 'the new data scientist', but is ChatGPT’s latest addition all it’s cracked up to be? We take Code Interpreter for a test drive. 
+  OpenAI's latest plugin turns ChatGPT into a tool for data cleaning, preprocessing, analysis, visualisation and predictive modelling tasks, among other things. Some have hailed it 'the new data scientist', but is it all it’s cracked up to be? Real World Data Science takes Code Interpreter for a test drive. 
 categories:
   - AI
   - Large language models
