--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!code-interpreter.qmd"
+    - "!schools-outreach.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -127,15 +127,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/07/27/schools-outreach.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Testing out ChatGPT’s new Code Interpreter
-OpenAI's latest plugin turns ChatGPT into a tool for data cleaning, preprocessing, analysis, visualisation and predictive modelling tasks, among other things. Some have hailed it 'the new data scientist', but is it all it’s cracked up to be? Real World Data Science takes Code Interpreter for a test drive. 
+## 'Go out and talk about data science, particularly to schoolchildren'
+Open University professor Rachel Hilliam calls for data science outreach in schools, to build skills pipeline and plug gaps: 'There is absolutely no reason why we can’t excite children in a career in data science.' 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/07/19/images/charlesdeluvio-pjAH2Ax4uWk-unsplash.png)
+![](viewpoints/editors-blog/posts/2023/07/27/images/kenny-eliason-zFSo6bnZJTw-unsplash.png)
 :::
 :::
 
